# hooya

./: .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml  shell.nix
.github/workflows/: rust.yml
daemon/: Cargo.toml
daemon/src/: main.rs
hooya/: build.rs
hooya-gtk/: Cargo.toml
hooya-gtk/src/: config.rs  main.rs  style.css
hooya-gtk/src/browse_grid_window/: imp.rs  mod.rs
hooya-gtk/src/file_view_window/: imp.rs  mod.rs
hooya-gtk/src/mason_grid_layout/: imp.rs  mod.rs
hooya-web-gateway/: Cargo.toml
hooya-web-gateway/src/: main.rs
hooyad/: Cargo.toml
hooyad/src/: client.rs  config.rs  server.rs  web-proxy.rs
proto/: control.proto  hooya.proto
