[package]
name = "hooyad"
version = "0.1.0"
edition = "2021"
authors = [ "wesl-ee <w@wesl.ee>" ]

[dependencies]
tonic = { version = "0.9" }
prost = { version = "0.11" }
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread"] }
hooya = { path = "../hooya" }

[build-dependencies]
tonic-build = "0.9"
