[package]
name = "hooya-web-gateway"
version = "0.1.0"
edition = "2021"
authors = [ "wesl-ee <w@wesl.ee>" ]

[dependencies]
tonic = { version = "0.9" }
prost = { version = "0.11" }
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
hooya = { path = "../packages/hooya" }
dotenv = "0.15"
clap = { version = "4.3", features = [ "env", "cargo" ] }
anyhow = "1.0"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
