[package]
name = "hooyad"
version = "0.1.0-prealpha"
edition = "2021"
authors = [ "wesl-ee <w@wesl.ee>" ]

[[bin]]
name = "hooya"
path = "src/client.rs"

[[bin]]
name = "hooyad"
path = "src/server.rs"

[dependencies]
tonic = { version = "0.9" }
prost = { version = "0.11" }
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread"] }
hooya = { path = "../packages/hooya" }
semver = "1.0"

[build-dependencies]
tonic-build = "0.9"
