[package]
name = "hooyad"
version = "0.1.0-prealpha"
edition = "2021"
authors = [ "wesl-ee <w@wesl.ee>" ]

[[bin]]
name = "hooya"
path = "src/client.rs"

[[bin]]
name = "hooyad"
path = "src/server.rs"

[dependencies]
tonic = { version = "0.9" }
prost = { version = "0.11" }
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
hooya = { path = "../packages/hooya" }
semver = "1.0"
clap = { version = "4.3", features = [ "derive", "env", "cargo" ] }
sqlx = { version = "0.6", features = [ "sqlite", "runtime-tokio-native-tls" ] }
rand = "0.8"
dotenv = "0.15"
anyhow = "1.0"
futures-util = "0.3"
